<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CupWorthy</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_cup">Red Cup</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- names for fragments -->
    <string name="fragment_1">Drinks</string>
    <string name="fragment_2">Hydration</string>
    <string name="fragment_3">SafeRide</string>
    <string name="fragment_4">Blacklist</string>
    <string name="fragment_5">Settings</string>

    <!-- alcohol types for spinner -->
    <string-array name="ui_alcohol_spinner_entries">
        <item>Vodka</item>
        <item>Gin</item>
        <item>Rum</item>
        <item>Beer</item>
        <item>Wine</item>
        <item>Champagne</item>
        <item>Wine Cooler</item>
    </string-array>

    <!-- preference strings -->
    <string name="user_info">My Information</string>
    <string name="title_age_preference">Age (years)</string>
    <string name="title_height_preference">Height (inches)</string>
    <string name="title_weight_preference">Weight (pounds)</string>
    <string name="title_gender_preference">Sex</string>
    <string name="title_cab_preference">Local Taxi #</string>
    <string name="title_gender_female">Female</string>
    <string name="title_gender_male">Male</string>
    <string name="title_activity_pref">prefActivity</string>
    <string name="hint_weight">150</string>
    <string name="hint_height">65</string>
    <string name="hint_age">22</string>
    <string name="hint_taxi">(555)555-5555</string>
    <string name="title_save">Save</string>
    <string name="title_cancel">Cancel</string>

    <!-- shared preferences -->
    <string name="preference_name">my_shared_preferences</string>
    <string name="preference_key_weight">profile_weight</string>
    <string name="preference_key_height">profile_height</string>
    <string name="preference_key_age">profile_age</string>
    <string name="preference_key_gender">profile_gender</string>
    <string name="preference_key_start_time">start_time</string>
    <string name="preference_key_consumption">consumption</string>
    <string name="preference_key_drink_number">drink_number</string>
    <string name="preference_key_bac">bac</string>
    <string name="preference_key_taxi">taxi</string>
    <string name="title_activity_cup">cupActivity</string>

</resources>
